--- a/autotests/indexerextractortestsconfig.h.in
+++ b/autotests/indexerextractortestsconfig.h.in
@@ -11,4 +11,7 @@
 #define INDEXER_TESTS_SAMPLE_FILES_PATH "@CMAKE_CURRENT_SOURCE_DIR@/samplefiles"
 #define INDEXER_TESTS_SAMPLE_CONFIGURED_FILES_PATH "@CMAKE_CURRENT_BINARY_DIR@/../autotests/samplefiles"
 
+#define INDEXER_TESTS_OFFICE_FILES_PATH "@CMAKE_CURRENT_SOURCE_DIR@/officefiles"
+#define INDEXER_TESTS_OFFICE_CONFIGURED_FILES_PATH "@CMAKE_CURRENT_BINARY_DIR@/../autotests/officefiles"
+
 #endif
