Add pdf&text extractor plugin and their autotests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,10 @@ set(REQUIRED_QT_VERSION 5.12.8)
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core REQUIRED)
 
+find_package(PkgConfig REQUIRED)
+pkg_search_module(POPPLER REQUIRED poppler-qt5)
+pkg_search_module(UCHARDET REQUIRED IMPORTED_TARGET uchardet)
+
 find_package(FFmpeg 57.48 COMPONENTS AVCODEC)
 find_package(FFmpeg 57.40 COMPONENTS AVFORMAT)
 find_package(FFmpeg 55.27 COMPONENTS AVUTIL)
