--- a/autotests/indexerextractortestsconfig.h.in
+++ b/autotests/indexerextractortestsconfig.h.in
@@ -1,6 +1,7 @@
 /*
     SPDX-FileCopyrightText: 2013 David Edmundson <davidedmundson@kde.org>
     SPDX-FileCopyrightText: 2022 iaom <zhangpengfei@kylinos.cn>
+    SPDX-FileCopyrightText: 2022 kirito <baijunjie@kylinos.cn>
 
     SPDX-License-Identifier: LGPL-2.1-only OR LGPL-3.0-only OR LicenseRef-KDE-Accepted-LGPL
 */
