Add the support of pkgconfig.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,10 +42,15 @@ set(UkuiFileMetaData_SRCS
 #    format-strings.cpp
     )
 
-add_library(UkuiFileMetaData
+add_library(UkuiFileMetaData SHARED
     ${UkuiFileMetaData_SRCS}
 )
 
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/pkgconfig/${PROJECT_NAME}.pc.in
+    ${CMAKE_CURRENT_BINARY_DIR}/ukui-file-meta-data.pc
+    @ONLY
+)
 target_link_libraries(UkuiFileMetaData PUBLIC Qt${QT_VERSION_MAJOR}::Core)
 
 target_compile_definitions(UkuiFileMetaData PRIVATE UKUIFILEMETADATA_LIBRARY)
@@ -57,6 +62,22 @@ else()
 endif()
 
 add_subdirectory(extractors)
+
+install(
+        FILES ${CMAKE_CURRENT_BINARY_DIR}/ukui-file-meta-data.pc
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
+)
+
+set_target_properties(UkuiFileMetaData PROPERTIES
+    VERSION ${VERSION}
+    SOVERSION "0"
+    OUTPUT_NAME ukuifilemetadata
+)
+
+install(
+    TARGETS UkuiFileMetaData
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    )
 
 install(
     FILES ${HEADERS}
