--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,8 +59,8 @@ configure_package_config_file(
 enable_testing()
 add_subdirectory(src)
 #if (BUILD_TESTING)
-add_subdirectory(autotests)
-add_subdirectory(tests)
+# add_subdirectory(autotests)
+# add_subdirectory(tests)
 #endif()
 
 feature_summary(WHAT ALL INCLUDE_QUIET_PACKAGES FATAL_ON_MISSING_REQUIRED_PACKAGES)
