调整一些小问题

--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: ukui-filemetadata
+Source: ukui-file-metadata
 Section: utils
 Priority: optional
 Maintainer: zhangpengfei <zhangpengfei@kylinos.cn>
