--- a/src/ukui-file-metadata-config.h.in
+++ b/src/ukui-file-metadata-config.h.in
@@ -6,5 +6,6 @@
 #define VERSION_MICRO "@VERSION_MICRO@"
 #define UKUI_FILE_METADATA_VERSION "@UKUI_FILE_METADATA_SERVER_VERSION@"
 #define PLUGIN_INSTALL_DIR "@PLUGIN_INSTALL_DIR@"
+#define EXTRACTOR_PLUGIN_IFACE_VERSION "@EXTRACTOR_PLUGIN_IFACE_VERSION@"
 
 #endif // UKUI_FILE_METADATA_CONFIG_H_IN
